# backpack

./: .actrc  .dockerignore  .easignore  .editorconfig  .env.example  .env.sample  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  .prettierrc  .yarnrc.yml  CNAME  Dockerfile  LICENSE  README.md  SECURITY.md  buildspec.yml  check-for-old-folders.sh  data.js  eas.json  iframe-example.html  package-lock.json  package.json  stripe-onramp.html  tmux-mobile.sh  transactions.js  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  turbo.json  updates.xml  watch.sh
.husky/: pre-commit
352/: service-worker-loader.html
backend/workers/authenticator/: Cargo.toml  README.md  package.json  wrangler.toml
backend/workers/authenticator/src/: lib.rs
backend/workers/hashor/: Cargo.toml  package.json
backend/workers/hashor/src/: lib.rs
docker/: Dockerrun.aws.json
docs/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
examples/: package.json
extension/: updates.xml
patches/: @cykura+sdk-core+0.1.7.patch  @jup-ag+cykura-sdk+0.1.24.patch  @jup-ag+cykura-sdk-core+0.1.7.patch  @mercurial-finance+optimist+0.1.3.patch  @project-serum+serum+0.13.65.patch  expo+45.0.6.patch  react-native+0.70.5.patch
provider/: package.json  rollup.config.ts  tsconfig.json
public/: injected.js  manifest.json  options.html  provider.js
scripts/: add-format.js  airtable-to-localizations.ts  check-docker-pin.sh  check-for-jwts.sh  check-package-json-react-native.sh  confirm-before-build-fresh.js  deploy_backpack_api.sh  deploy_notifications.sh  deploy_xnft_api_server.sh  force_workspace_installs.py  monorepo_depcheck.sh  monorepo_depcheck.ts  npm_release.sh  sync-expo-deps.js  sync-localizations-to-airtable.ts  verify_workspace_package.sh
src/: index.css  (+1 more)
(+1448 files in other folders)
